cards_game.css
@import url("https://raw.githack.com/mamrezn7/Davilo_app/master/general_stylesheet.css");

/*end of general css*/
 @keyframes breathing {
     0%{
         transform: scale(1);
         -o-transform: scale(1);
         -webkit-transform: scale(1);
         -moz-transform: scale(1);
         box-shadow: 0 2px 4px rgba(0,0,0,.35);
         -o-box-shadow: 0 2px 4px rgba(0,0,0,.35);
         -webkit-box-shadow: 0 2px 4px rgba(0,0,0,.35);
         -moz-box-shadow: 0 2px 4px rgba(0,0,0,.35);
     }
     50%{
         transform: scale(1.05);
         -o-transform: scale(1.05);
         -webkit-transform: scale(1.05);
         -moz-transform: scale(1.05);
         box-shadow: 0 3px 6px rgba(0,0,0,.35);
         -o-box-shadow: 0 3px 6px rgba(0,0,0,.35);
         -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.35);
         -moz-box-shadow: 0 3px 6px rgba(0,0,0,.35);
     }
     100%{
         transform: scale(1);
         -o-transform: scale(1);
         -webkit-transform: scale(1);
         -moz-transform: scale(1);
         box-shadow: 0 2px 4px rgba(0,0,0,.35);
         -o-box-shadow: 0 2px 4px rgba(0,0,0,.35);
         -webkit-box-shadow: 0 2px 4px rgba(0,0,0,.35);
         -moz-box-shadow: 0 2px 4px rgba(0,0,0,.35);
     }
 }
.overflow-wrap > #cards{
    background: var(--light-gray-10);
}
 .card.dragging{
     animation-name: breathing;
     animation-duration: 2s;
     animation-iteration-count: infinite;
     -moz-animation-name: breathing;
     -moz-animation-duration: 2s;
     -moz-animation-iteration-count: infinite;
     -o-animation-name: breathing;
     -o-animation-duration: 2s;
     -o-animation-iteration-count: infinite;
     -webkit-animation-name: breathing;
     -webkit-animation-duration: 2s;
     -webkit-animation-iteration-count: infinite;
 }

 .card{
     box-shadow: 0 2px 4px rgba(0,0,0,.35);
     -o-box-shadow: 0 2px 4px rgba(0,0,0,.35);
     -webkit-box-shadow: 0 2px 4px rgba(0,0,0,.35);
     -moz-box-shadow: 0 2px 4px rgba(0,0,0,.35);
 }

